implement payment using paypal

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Food Restaurant</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://www.paypal.com/sdk/js?currency=USD&client-id=AVNmJcmKDHyH7PgtJPeQWgqlbWs2ZN7CY6IuwXC-jaNe_5XhPSQxYMVx9LGTPKcProwyFBfCXomwlfsK"></script>
 </body>
 </html>
